--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -836,7 +836,7 @@
   }
 
   .logo-header .logo {
-    width: 125px !important;
+    /* width: 125px !important; */
   }
   /* .mobile_logo {
     padding-left: 22px !important;
