--- a/src/styles/best-page.css
+++ b/src/styles/best-page.css
@@ -578,7 +578,7 @@ section.comparisons-slider.no-before:before {
   color: var(--heading-color);
   font-weight: 600 !important;
   font-size: 16px !important;
-  line-height: 34px;
+  line-height: 28px;
   text-transform: uppercase;
   /* font-family: "BR Hendrix Semi Bold"; */
 }
@@ -844,6 +844,7 @@ section.comparisons-slider.no-before:before {
   padding: 3px 0px 0px 0px !important;
   gap: 18px !important;
   margin: 8px 0;
+
 }
 
 .best-product-listing
@@ -1444,7 +1445,7 @@ body .product-listing-inner-content .score-section .score-detail h6 {
 
 .table-accordion .accordion-button div .show-btn,
 .table-accordion .accordion-button div .hide-btn {
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
   padding: 4px 15px;
 }
 
