--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2419,7 +2419,7 @@ span.isBetter {
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
-  display: block;
+  /* display: block; */
 }
 a.product_link:hover {
   color: #3363a4 !important;
