--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -2408,7 +2408,7 @@
   }
 
   #mobile-compare-tabler thead tr th {
-    padding: 0 0px !important;
+    padding: 0 12px !important;
   }
 
   #mobile-compare-tabler thead tr th > .device-name{
@@ -2477,6 +2477,10 @@
 }
 
 @media screen and (max-width: 640px) {
+  #mobile-compare-tabler thead tr th {
+    padding: 0 12px !important;
+  }
+
   #mobile-compare-tabler thead tr th > .device-name img{
     display: none !important;
   }
