--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -685,7 +685,7 @@
   justify-content: center;
   min-width: 120px;
   /* border: 1p; */
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
 }
 
 .compare-accordion .accordion-button .show-btn i {
