--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2177,7 +2177,8 @@ h4.attribute__title {
   display: flex;
   align-items: center;
   padding: 2px 0;
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
 }
 
 .p-top-20 {
