--- a/src/styles/best-page.css
+++ b/src/styles/best-page.css
@@ -193,11 +193,23 @@ thead.nonSticky tr th:first-child,
   top: 0;
   bottom: 0;
 }
-#mobile-compare-tabler .device-name a {
+#mobile-compare-tabler .device-name a.vs_page_name {
   position: static !important;
   display: none;
   color: rgb(39 48 78 / 90%);
-  max-width: 110px;
+  max-width: 150px;
+}
+#mobile-compare-tabler .device-name a.product_page_name {
+  position: static !important;
+  display: none;
+  color: rgb(39 48 78 / 90%);
+  max-width: 150px;
+}
+#mobile-compare-tabler .device-name a.guide_page {
+  position: static !important;
+  display: none;
+  color: rgb(39 48 78 / 90%);
+  max-width: 120px;
 }
 .compare-container thead tr th:hover .device-name a {
   color: #437ece !important;
@@ -332,6 +344,36 @@ thead.isSticky {
 }
 
 .compare-container thead tr th .device-name .product-name-small {
+  display: -webkit-box !important;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  font-weight: 600 !important;
+  font-size: 15px !important;
+  min-width: 78px;
+  /* min-width: 150px; */
+}
+
+.compare-container
+  thead
+  tr
+  th
+  .device-name
+  small.product-name-small.guide_page {
+  display: -webkit-box !important;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  font-weight: 600 !important;
+  font-size: 15px !important;
+  min-width: 78px;
+}
+.compare-container
+  thead
+  tr
+  th
+  .device-name
+  .product-name-small.product-name-small {
   display: -webkit-box !important;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
