working_on_hover_tool_tips_neet

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -2485,4 +2485,10 @@
   #mobile-compare-tabler thead tr th > .device-name img {
     display: none !important;
   }
+  .question_hover_container {
+    position: static !important;
+  }
+  .tooltip-title:hover .tooltip-display-content {
+    left: 50% !important;
+  }
 }
