new_changes_hover_tooltips_neet

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -2490,5 +2490,6 @@
   }
   .tooltip-title:hover .tooltip-display-content {
     left: 50% !important;
+    transform: translateX(50%) !important;
   }
 }
