--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -2491,6 +2491,6 @@
   .tooltip-title:hover .tooltip-display-content {
     left: 50% !important;
     transform: translateX(40px) !important;
-    width: 160px !important;
+    /* width: 160px !important; */
   }
 }
