--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -2488,6 +2488,13 @@
   .question_hover_container {
     position: static !important;
   }
+  .techincalScoreHover{
+    position: relative !important;
+  
+  }
+  .techincalScoreHover .display-content{
+    transform: unset !important;
+  }
   .tooltip-title:hover .tooltip-display-content {
     left: 50% !important;
     transform: translateX(40px) !important;
