new_changing_on_question_hover_neet

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -2500,4 +2500,7 @@
     transform: translateX(40px) !important;
     /* width: 160px !important; */
   }
+  .product_table:hover .tooltip-display-content{
+    transform: translateX(-35%) !important;
+  }
 }
