--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -2117,7 +2117,7 @@
     /* margin-left: 6px; */
   }
   .table-accordion .spec-section .spec-item .spec-col div.question-marker-icon,
-  div.question-marker-icon{
+  div.question-marker-icon {
     width: 20px !important;
     height: 20px;
   }
@@ -2493,11 +2493,10 @@
   .question_hover_container {
     position: static !important;
   }
-  .techincalScoreHover{
+  .techincalScoreHover {
     position: relative !important;
-  
   }
-  .techincalScoreHover .display-content{
+  .techincalScoreHover .display-content {
     transform: unset !important;
   }
   .tooltip-title:hover .tooltip-display-content {
@@ -2505,7 +2504,22 @@
     transform: translateX(40px) !important;
     /* width: 160px !important; */
   }
-  .product_table:hover .tooltip-display-content{
+  .product_table:hover .tooltip-display-content {
     transform: translateX(-35%) !important;
+  }
+  .compare-container
+    thead
+    tr
+    th
+    .device-name
+    .product-name-small.product-name-small {
+    display: -webkit-box !important;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    font-weight: 600 !important;
+    font-size: 15px !important;
+    /* min-width: 78px; */
+    min-width: 150px;
   }
 }
