--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,8 @@ body {
   font-family: "Lato", sans-serif !important;
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  overflow-y: auto;
 }
 
 .container,
