--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2520,6 +2520,26 @@ tr:first-child th {
 }
 
 @media (max-width: 992px) and (min-width: 768px) {
+  .swiper-prev {
+    left: -8px !important;
+  }
+  .swiper-next {
+    right: -8px !important;
+  }
+  .legendBoxBarChart {
+    position: static !important;
+    margin: 0px auto 0;
+    width: 100%;
+    max-width: 250px;
+    float: none;
+    padding: 70px 0px 0 75px;
+  }
+  #mobile-compare-tabler .device-name a {
+    max-width: 250px !important;
+  }
+}
+
+@media (max-width: 992px) {
   table#mobile-compare-tabler.isSticky.compare-container thead {
     width: 100% !important;
     display: block !important;
@@ -2570,24 +2590,6 @@ tr:first-child th {
     a {
     font-size: 16px !important;
     font-weight: 500 !important;
-  }
-
-  .swiper-prev {
-    left: -8px !important;
-  }
-  .swiper-next {
-    right: -8px !important;
-  }
-  .legendBoxBarChart {
-    position: static !important;
-    margin: 0px auto 0;
-    width: 100%;
-    max-width: 250px;
-    float: none;
-    padding: 70px 0px 0 75px;
-  }
-  #mobile-compare-tabler .device-name a {
-    max-width: 250px !important;
   }
 }
 
