--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -1763,7 +1763,8 @@
     justify-content: space-between;
     position: sticky;
     width: 100%;
-    top: 50%;
+    /* top: 50%; */
+    top: 130px !important;
     z-index: 1000;
     bottom: 0;
     display: flex !important;
@@ -2008,30 +2009,41 @@
     width: 100px !important;
   }
 
-  .compare-container thead tr th:not(:first-child), .compare-container tbody tr td{
+  .compare-container thead tr th:not(:first-child),
+  .compare-container tbody tr td {
     min-width: 100px !important;
     max-width: 100px !important;
     width: 100px !important;
   }
 
-  .table-section-mobile .best-price-section:not(.ranking) .best-list-item li:not(.d-flex), .isSticky .best-list-item li:not(.d-flex){
+  .table-section-mobile
+    .best-price-section:not(.ranking)
+    .best-list-item
+    li:not(.d-flex),
+  .isSticky .best-list-item li:not(.d-flex) {
     grid-template-columns: calc(100% - 0px) !important;
   }
 
-  .table-section-mobile .compare-container thead.isSticky{
+  .table-section-mobile .compare-container thead.isSticky {
     width: 100%;
     right: 12px;
   }
 
-  .table-section-mobile .compare-container thead.isSticky tr{
+  .table-section-mobile .compare-container thead.isSticky tr {
     min-width: 100% !important;
   }
 
-  .table-section-mobile .compare-container thead.isSticky tr th:first-child{
+  .table-section-mobile .compare-container thead.isSticky tr th:first-child {
     min-width: 115px !important;
   }
 
-  .table-section-mobile .compare-container thead.isSticky tr th .device-name .compare_image{
+  .table-section-mobile
+    .compare-container
+    thead.isSticky
+    tr
+    th
+    .device-name
+    .compare_image {
     display: none !important;
   }
 }
