--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1416,7 +1416,7 @@ a.outlineLink.outline-active {
 }
 
 #shortCodeText img {
-  width: 100%;
+  /* width: 100%; */
   height: auto;
   object-fit: contain;
 }
