--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1416,8 +1416,8 @@ a.outlineLink.outline-active {
 }
 
 #shortCodeText img {
-  /* width: 100%; */
-  height: auto;
+  max-width:100%;
+  /* height: auto; */
   object-fit: contain;
 }
 
