--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1417,7 +1417,7 @@ a.outlineLink.outline-active {
 
 #shortCodeText img {
   max-width:100%;
-  /* height: auto; */
+  height: auto;
   object-fit: contain;
 }
 
