--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1716,7 +1716,7 @@ li.color-item.selected {
   display: flex;
   gap: 10px;
   padding: 8px 0px;
-  align-items: center;
+  align-items: baseline;
 }
 .inline-power-section img {
   width: 10px;
@@ -1726,7 +1726,7 @@ li.color-item.selected {
   color: rgb(39 48 78 / 90%);
   display: flex;
   flex-wrap: wrap;
-  gap: 25px;
+  gap: 5px 25px;
 }
 .inline-power-section ul li {
   position: relative;
